Added links on the top of index page for the other 2 pages resume and music

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     </header>
     <nav id="main-nav">
       <ul>
-
+        <li><a href="resume.html">My Resume</a></li>
+        <li><a href="music.html">My Music</a></li>
 
       </ul>
     </nav>
     <main id="content-wrapper">
+
     </main>
     <footer id="footer">
-
+      <p>Footer Content is here</p>
     </footer>
   </div>
 </body>
