Added a list of facts about me!

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       </ul>
     </nav>
     <main id="content-wrapper">
+        <h2>Hi, I'm Shayan! Here's a little bit about me:</h2>
+        <ul>
+          <li>I'm a student at Illinois Tech</li>
+          <li>My major is Computer Science</li>
+          <li>I'll be graduating a semester early (undecided if I want to do a minor and stay my full 4 years...)</li>
+
 
     </main>
     <footer id="footer">
