--- a/index.html
+++ b/index.html
@@ -13,17 +13,21 @@
     </header>
     <nav id="main-nav">
       <ul>
+        <li><a href="index.html">Main Page</a></li>
         <li><a href="resume.html">My Resume</a></li>
         <li><a href="music.html">My Music</a></li>
 
       </ul>
     </nav>
     <main id="content-wrapper">
-        <h2>Hi, I'm Shayan! Here's a little bit about me:</h2>
+        <h2>Hi, I'm Shayan! Here's a little bit about my school background:</h2>
         <ul>
           <li>I'm a student at Illinois Tech</li>
           <li>My major is Computer Science</li>
-          <li>I'll be graduating a semester early (undecided if I want to do a minor and stay my full 4 years...)</li>
+          <li>I'll be graduating a semester early with my Bachelors (undecided if I want to do a minor and stay my full 4 years...)</li>
+        <h2>And here's a little bit about me:</h2>
+        <li>I was born in the middle of nowhere, Oklahoma (shown below)</li>
+        <img src="images/lawton_ok.jpg" alt="Lawton, Oklahoma" width="320" height = "200">
 
 
     </main>
