Added more facts about me, along with a picture of IIT's campus

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <nav id="main-nav">
       <ul>
-        <li><a href="index.html">Main Page</a></li>
+            <li><a href="index.html">Main Page</a></li>
         <li><a href="resume.html">My Resume</a></li>
         <li><a href="music.html">My Music</a></li>
 
@@ -22,12 +22,20 @@
     <main id="content-wrapper">
         <h2>Hi, I'm Shayan! Here's a little bit about my school background:</h2>
         <ul>
+          <img src="images/IIT.jpeg" alt="Illinois Tech" width="320" height = "200">
           <li>I'm a student at Illinois Tech</li>
           <li>My major is Computer Science</li>
           <li>I'll be graduating a semester early with my Bachelors (undecided if I want to do a minor and stay my full 4 years...)</li>
+        </ul>
         <h2>And here's a little bit about me:</h2>
-        <li>I was born in the middle of nowhere, Oklahoma (shown below)</li>
-        <img src="images/lawton_ok.jpg" alt="Lawton, Oklahoma" width="320" height = "200">
+        <ul>
+            <li>I was born in the middle of nowhere, Oklahoma (shown below)</li>
+            <img src="images/lawton_ok.jpg" alt="Lawton, Oklahoma" width="320" height = "200">
+            <li>I've lived most of my life in the Chicago suburbs</li>
+            <li>I'm pretty big into all things tech! (I should be, for a CS major. I don't know what else I'd be doing with my life if I wasn't)</li>
+            <li>I'm into cars!</li>
+            <li>I listen to a lot of music! Check out the music page linked at the top of this page for more info.</li>
+        </ul>
 
 
     </main>
