Added pictures and info about my cats! Should be the index page mostly done now..

--- a/index.html
+++ b/index.html
@@ -35,12 +35,16 @@
             <li>I'm pretty big into all things tech! (I should be, for a CS major. I don't know what else I'd be doing with my life if I wasn't)</li>
             <li>I'm into cars!</li>
             <li>I listen to a lot of music! Check out the music page linked at the top of this page for more info.</li>
+            <li>I have 2 cats named Milo and Leo! Below's an older picture of them on the left and a recent one on the right.</li>
+            <img src="images/cats_young.jpg" alt="Older picture of my cats" width = "400" height = "450">
+            <img src="images/cats_recent.jpg" alt="Newer picture of my cats" width = "400" height = "450">
+
         </ul>
 
 
     </main>
     <footer id="footer">
-      <p>Footer Content is here</p>
+      <p>Shayan's personal website</p>
     </footer>
   </div>
 </body>
