Got rid of the footer on the index and resume pages, added my skills and experience to resume

--- a/resume.html
+++ b/resume.html
@@ -30,15 +30,36 @@
         <ul>
             <li>Hoffman Estates High School, Graduated: May 2021</li>
             <li>Illinois Institute of Technology: Bachelors in Computer Science, expected Graduation: December 2024</li>
+        </ul>
+        <h2>Skills</h2>
+        <h3>Programming Languages and relevant programs </h3>
+        <ul>
+            <li>Java</li>
+            <li>Python</li>
+            <li>Learning C</li>
+            <li>HTML/CSS</li>
+            <li>JavaScript (libraries including Node, React, Next)</li>
+            <li>SQL</li>
+            <li>OCaml</li>
+            <li>GitHub</li>
+            <li>Google Firebase</li>
+            <li>MongoDB</li>
+            <li>Vercel</li>
+        </ul>
+        <h3>Experience/Work I'm Actively Doing</h3>
+        <ul>
+            <li>Mosaic: a startup I'm actively working on! <a href ="https://www.linkedin.com/company/mosaicjobs/">Check us out!</a></li>
+            <li>MatchUp: the first student-athlete dating app. (abandoned passion project)</li>
+            <li>CTA Route Generator in Java!</li>
 
-        <h2>Experience</h2>
+
+
+
+
 
 
 
     </main>
-    <footer id="footer">
-      <p>Shayan's personal website</p>
-    </footer>
   </div>
 </body>
 
