--- a/resume.html
+++ b/resume.html
@@ -28,8 +28,8 @@
         </ul>
         <h2>Education</h2>
         <ul>
-            <li>Hoffman Estates High School, Graduated: May 2021</li>
-            <li>Illinois Institute of Technology: Bachelors in Computer Science, expected Graduation: December 2024</li>
+            <li>Hoffman Estates High School, graduated: May 2021</li>
+            <li>Illinois Institute of Technology: Bachelors in Computer Science, expected graduation: December 2024</li>
         </ul>
         <h2>Skills</h2>
         <h3>Programming Languages and relevant programs </h3>
