Added my school email, taking a short break..

--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
     <main id="content-wrapper">
         <h2>Contact Information</h2>
         <ul>
-            <li>Email: shayan1baig@gmail.com</li>
+            <li>Email: shayan1baig@gmail.com, sbaig7@hawk.iit.edu</li>
             <li><a href="https://www.linkedin.com/in/shayan-baig/">LinkedIn</a></li>
             <li><a href="https://github.com/ShayanMB">GitHub</a></li>
         </ul>
