Converted video to mp4 so that it can play within website. mov extensions can't for whatever reason

--- a/music.html
+++ b/music.html
@@ -24,7 +24,7 @@
         <img src="images/top20songs4weeks.png" alt="Top 20 songs" width="320" height = "900">
         <h2>My favorite music artist: Oasis!</h2>
         <p>Here's a video clip of some of their crowd interactions.</p>
-        <iframe width="560" height="315" src="video/Oasis.mov" title="Oasis and toenails" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="video/Oasis.mp4" title="Oasis and toenails" allowfullscreen></iframe>
 
     </main>
   </div>
