Fixing indenting to double spaces and added picture to resume

--- a/resume.html
+++ b/resume.html
@@ -17,9 +17,9 @@
       <h1>Shayan's Resume</h1>
     </header>
     <nav id="main-nav">
-
     </nav>
     <main id="content-wrapper">
+      <img src = "images/resume_picture.jpg" alt = "LinkedIn Profile Picture" width = "380" height = "400">
       <h2>Contact Information</h2>
       <ul>
         <li>Email: shayan1baig@gmail.com, sbaig7@hawk.iit.edu</li>
@@ -30,8 +30,8 @@
       <ul>
           <li>Hoffman Estates High School, graduated: May 2021</li>
           <li>Illinois Institute of Technology: Bachelors in Computer Science, expected graduation: December 2024</li>
-        </ul>
-        <h2>Skills</h2>
+      </ul>
+      <h2>Skills</h2>
         <h3>Programming Languages and relevant programs </h3>
         <ul>
           <li>Java</li>
