Making all file names lowercase

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <main id="content-wrapper">
       <h2>Hi, I'm Shayan! Here's a little bit about my school background:</h2>
-      <img src="images/IIT.jpeg" alt="Illinois Tech" width="320" height = "200">
+      <img src="images/iit.jpeg" alt="Illinois Tech" width="320" height = "200">
       <ul>
         <li>I'm a student at Illinois Tech</li>
         <li>My major is Computer Science</li>
