--- a/music.html
+++ b/music.html
@@ -3,29 +3,33 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Shayan Baig: Project 1</title>
+  <title>shayan baig: project 1</title>
 </head>
 
 <body>
   <div id="page-wrapper">
     <header id="header">
-    <ul>
-      <li><a href="index.html">Main Page</a></li>
-      <li><a href="resume.html">My Resume</a></li>
-      <li><a href="music.html">My Music</a></li>
-    </ul>
+      <ul>
+        <li><a href="index.html">Main Page</a></li>
+        <li><a href="resume.html">My Resume</a></li>
+        <li><a href="music.html">My Music</a></li>
+      </ul>
       <h1>Shayan's Music</h1>
     </header>
-    <nav id="main-nav">
 
-    </nav>
     <main id="content-wrapper">
-      <h2>My top songs for the last 4 weeks</h2>
-      <img src="images/top20songs4weeks.png" alt="Top 20 songs" width="320" height = "900">
-      <h2>My favorite music artist: Oasis!</h2>
-      <p>Here's a video clip of some of their crowd interactions.</p>
-      <iframe width="560" height="315" src="video/Oasis.mp4" title="Oasis and toenails" allowfullscreen></iframe>
+      <section>
+        <h2>My Top Songs for the Last 4 Weeks</h2>
+        <img src="images/top20songs4weeks.png" alt="Top 20 songs">
+      </section>
+
+      <section>
+        <h2>My Favorite Music Artist: Oasis!</h2>
+        <p>Here's a video clip of some of their crowd interactions.</p>
+        <iframe width="560" height="315" src="video/Oasis.mp4" title="Oasis and toenails" allowfullscreen></iframe>
+      </section>
     </main>
   </div>
 </body>
+
 </html>
