--- a/music.html
+++ b/music.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>shayan baig: project 1</title>
+  <title>Shayan baig: Project 1</title>
 </head>
 
 <body>
